<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2ECFF">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#DBC5FF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DBC5FF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/ProfileTab"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="#4B0082"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/ProfileNotification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#DBC5FF"
            android:contentDescription="@string/notification"
            app:srcCompat="@drawable/notification_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DBC5FF"
            android:iconifiedByDefault="false"
            android:queryHint="Search events..."
            app:cornerRadius="@dimen/cardview_default_radius" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/filter_buttons_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/view_switcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCarousel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#DBC5FF"
                android:stateListAnimator="@null"
                android:text="♡ Carousel Mode"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#DBC5FF"
                android:stateListAnimator="@null"
                android:text="⏱ History"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#DBC5FF"
                android:stateListAnimator="@null"
                android:text="📄 Filter Events"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnOrganizerMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#DBC5FF"
                android:layout_marginEnd="8dp"
                android:stateListAnimator="@null"
                android:text="📄 Organizer Mode"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnAdminMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#DBC5FF"
                android:stateListAnimator="@null"
                android:text="📄 Admin Mode"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2ECFF"
        app:layout_constraintBottom_toTopOf="@+id/action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_buttons_scroll">

        <ListView
            android:id="@+id/eventListView"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:layout_marginHorizontal="1dp"
            android:background="#F2ECFF"
            android:visibility="visible" />

        <com.yuyakaido.android.cardstackview.CardStackView
            android:id="@+id/card_stack_view"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:visibility="visible" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/HomeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#F2ECFF"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/home_selected" />

        <ImageButton
            android:id="@+id/qrButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#F2ECFF"
            android:contentDescription="@string/qrCode"
            app:srcCompat="@drawable/camera" />


        <ImageButton
            android:id="@+id/ProfileButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#F2ECFF"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/profile" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>